[gd_scene load_steps=9 format=3 uid="uid://dyi1xfqhtuny6"]

[ext_resource type="Script" path="res://scripts/choose_mode_menu.gd" id="1_j0x0c"]
[ext_resource type="Texture2D" uid="uid://dfbqc3pkaemao" path="res://assets/UI_Assets/blank_button.png" id="2_u017n"]
[ext_resource type="Theme" uid="uid://bfrlp1sdiryxp" path="res://scenes/button_theme.tres" id="3_h06hw"]
[ext_resource type="AudioStream" uid="uid://c86sl00wop8c" path="res://assets/sounds/ui-pop-up.wav" id="4_n1fs2"]
[ext_resource type="FontFile" uid="uid://deaw8q1850h51" path="res://assets/fonts/PressStart2P-Regular.ttf" id="5_qpd4l"]
[ext_resource type="LabelSettings" uid="uid://cnfdbdkvdq1x0" path="res://assets/fonts/game_over_Label.tres" id="6_lp0lw"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_1ib5u"]

[sub_resource type="LabelSettings" id="LabelSettings_ar0fq"]
font = ExtResource("5_qpd4l")
font_size = 42
font_color = Color(0, 0, 0, 1)
outline_size = 3

[node name="ChooseModeMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
size_flags_vertical = 0
focus_mode = 2
script = ExtResource("1_j0x0c")

[node name="LogoContainer" type="PanelContainer" parent="."]
layout_mode = 0
offset_left = 220.0
offset_top = 95.0
offset_right = 976.0
offset_bottom = 137.0
theme_override_styles/panel = SubResource("StyleBoxTexture_1ib5u")

[node name="GameName" type="Label" parent="LogoContainer"]
layout_mode = 2
text = "Wasteland Survivor"
label_settings = SubResource("LabelSettings_ar0fq")

[node name="StoryModeButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -154.0
offset_top = -123.0
offset_right = 154.0
offset_bottom = -29.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_h06hw")
theme_override_colors/icon_focus_color = Color(0.721569, 0, 0, 1)
disabled = true
text = "Story Mode"
icon = ExtResource("2_u017n")
flat = true
icon_alignment = 1
expand_icon = true

[node name="InfiniteWastelandButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -155.0
offset_top = -22.0
offset_right = 153.0
offset_bottom = 72.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_h06hw")
text = "Infinite Apocalypse"
icon = ExtResource("2_u017n")
flat = true
icon_alignment = 1
expand_icon = true

[node name="ExitButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -155.0
offset_top = 79.0
offset_right = 153.0
offset_bottom = 173.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_h06hw")
text = "Back"
icon = ExtResource("2_u017n")
flat = true
icon_alignment = 1
expand_icon = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_n1fs2")
volume_db = -10.0

[node name="StoryModeWIPLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 756.0
offset_top = 231.0
offset_right = 828.0
offset_bottom = 255.0
text = "WIP"
label_settings = ExtResource("6_lp0lw")
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="focus_entered" from="StoryModeButton" to="." method="_on_play_button_focus_entered"]
[connection signal="focus_exited" from="StoryModeButton" to="." method="_on_play_button_focus_exited"]
[connection signal="mouse_entered" from="StoryModeButton" to="." method="_on_play_button_mouse_entered"]
[connection signal="mouse_exited" from="StoryModeButton" to="." method="_on_play_button_mouse_exited"]
[connection signal="pressed" from="StoryModeButton" to="." method="_on_play_button_pressed"]
[connection signal="focus_entered" from="InfiniteWastelandButton" to="." method="_on_infinite_wasteland_button_focus_entered"]
[connection signal="mouse_entered" from="InfiniteWastelandButton" to="." method="_on_infinite_wasteland_button_mouse_entered"]
[connection signal="mouse_exited" from="InfiniteWastelandButton" to="." method="_on_infinite_wasteland_button_mouse_exited"]
[connection signal="pressed" from="InfiniteWastelandButton" to="." method="_on_infinite_wasteland_button_pressed"]
[connection signal="focus_entered" from="ExitButton" to="." method="_on_exit_button_focus_entered"]
[connection signal="focus_exited" from="ExitButton" to="." method="_on_exit_button_focus_exited"]
[connection signal="mouse_entered" from="ExitButton" to="." method="_on_exit_button_mouse_entered"]
[connection signal="mouse_exited" from="ExitButton" to="." method="_on_exit_button_mouse_exited"]
[connection signal="pressed" from="ExitButton" to="." method="_on_exit_button_pressed"]
